fixed blurred selection background color, closes #2652

--- a/src/public/stylesheets/ckeditor-theme.css
+++ b/src/public/stylesheets/ckeditor-theme.css
@@ -93,6 +93,8 @@ body {
 
     --ck-color-labeled-field-label-background: var(--accented-background-color);
 
+    --ck-color-editable-blur-selection: var(--accented-background-color);
+
     /* todo lists */
 
     --ck-color-todo-list-checkmark-border: var(--main-border-color);
